--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -3,11 +3,13 @@
 nav {
   max-width: 100%;
   height: 7vh;
+  min-height: 50px;
   border-bottom: 0.5px solid grey;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .logo {
@@ -46,6 +48,7 @@ nav {
 .navLinks li:hover,
 .rightLinks span:hover {
   border-bottom: 1px solid blue;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -54,6 +57,9 @@ nav {
   }
 
   nav {
-    border: none;
+    /* border: none; */
+    margin: 15px;
+    min-height: 50px;
+    border: 1px solid blue;
   }
 }
