--- a/src/components/recentSearches/recentSearches.css
+++ b/src/components/recentSearches/recentSearches.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   background-color: var(--lightPink);
+  padding: 10px;
 }
 
 .recentSearchContainer--header {
@@ -14,6 +15,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 20px auto;
+  border: 1px solid black;
 }
 
 .recentSearchContainer--header button {
@@ -31,10 +33,13 @@
 
 .searchInfoContainer {
   width: 500px;
+  min-height: 450px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border: 1px solid red;
+  margin-bottom: 20px;
 }
 
 .searchInfo {
